# stock-investment-split

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
src/controller/: error.py  run.py  scipy_optimizer.py
src/controller/utils/: results.py
src/models/: financial_instruments.py  optimizers.py
src/view/: file.py
src/views/: file.py  terminal.py
test/: mocks.py  test_integration.py
test/__snapshots__/: test_integration.ambr
test/controller/: test_error.py  test_run.py  test_scipy_optimizer.py
test/controller/__snapshots__/: test_error.ambr
test/controller/utils/: test_results.py
test/controller/utils/__snapshots__/: test_results.ambr
test/models/: test_financial_instruments.py  test_optimizers.py
