[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | venv
  | \.history
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations", ".env", "venv", ".local", ".history", ".vscode"]
skip_glob = ["lib/*"]

[tool.poetry]
name = "stock-investment-split"
version = "0.1.0"
description = "Calculate how much to invst in each instrument (stock) out of a basket to achieve a target % allocation for each instrument (stock)."
authors = ["Ashutosh <37182127+ashu-tosh-kumar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
repository = "https://github.com/ashu-tosh-kumar/stock-investment-split"

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "^1.26.4"
pydantic = "^2.6.4"
scipy = "^1.12.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
pytest-randomly = "^3.15.0"
syrupy = "^4.6.1"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
